--- a/style.css
+++ b/style.css
@@ -1,25 +1,74 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap");
 * {
+  box-sizing: border-box;
+  font-family: "Roboto Mono", monospace;
   margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
+  padding: 0; }
 
 body {
   display: flex;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw; }
+
+.main-container {
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh; }
+  height: 100vh;
+  width: 95%;
+  max-width: 1297.7px; }
 
 header {
   padding: 7px;
   width: 100%; }
   header a {
+    font-weight: 300;
     text-decoration: none;
     color: inherit;
     cursor: pointer; }
 
+main {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 50%;
+  justify-content: space-around; }
+  main .key {
+    width: 600px !important; }
+    main .key button {
+      background-color: white;
+      border: 1px solid #a9a9a9;
+      border-radius: 15px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+      cursor: pointer;
+      padding: 10px; }
+  main .container {
+    display: flex;
+    justify-content: space-around;
+    width: 100%; }
+  main .input-box textarea {
+    border-radius: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+    height: 10rem;
+    outline: none;
+    padding: 15px;
+    width: 30rem;
+    resize: none; }
+
 footer {
   bottom: 0;
+  font-weight: 300;
   margin: 0 auto;
   padding: 5px; }
+
+#key {
+  border: 1px solid grey;
+  border-radius: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+  height: 50px;
+  outline: none;
+  padding: 15px;
+  width: 400px; }
 
 /*# sourceMappingURL=style.css.map */
