--- a/style.css
+++ b/style.css
@@ -33,17 +33,19 @@ main {
   display: flex;
   flex-direction: column;
   height: 50%;
-  justify-content: space-around; }
-  main .key {
-    width: 600px !important; }
-    main .key button {
-      background-color: white;
-      border: 1px solid #a9a9a9;
-      border-radius: 15px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
-      cursor: pointer;
-      padding: 10px; }
+  justify-content: space-around;
+  padding-bottom: 31px; }
+  main .key button {
+    background-color: white;
+    border: 1px solid #a9a9a9;
+    border-radius: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+    cursor: pointer;
+    margin-left: 15px;
+    margin-right: auto;
+    padding: 15px; }
   main .container {
+    align-items: center;
     display: flex;
     justify-content: space-around;
     width: 100%; }
@@ -67,8 +69,20 @@ footer {
   border-radius: 15px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
   height: 50px;
+  margin-left: auto;
   outline: none;
   padding: 15px;
   width: 400px; }
+
+@media only screen and (max-width: 420px) {
+  main .container {
+    justify-content: space-around;
+    flex-direction: column; }
+  main .key {
+    align-items: center; }
+    main .key button {
+      margin: unset; }
+  main .input-box textarea {
+    width: 20rem; } }
 
 /*# sourceMappingURL=style.css.map */
